--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <span>L</span>
     </div>
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!!</span>
+        <span>Ryuu ada hadiah special buat Amel yang paling ryu sayang, diterima ya sayang!!</span>
     </div>
     <div class="button">
         <button>
