--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
+        <span>N</span>
+        <span>I</span>
         <span>A</span>
-        <span>M</span>
-        <span>E</span>
-        <span>L</span>
+        <span>A</span>
     </div>
     <div class="description">
         <span>Ryuu ada hadiah special buat Amel yang paling ryu sayang, diterima ya sayang!!</span>
