--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <span>A</span>
     </div>
     <div class="description">
-        <span>Ryuu ada hadiah special buat Amel yang paling ryu sayang, diterima ya sayang!!</span>
+        <span>Ryuu ada hadiah special buat Niaa yang paling ryu sayang, diterima ya sayang!!</span>
     </div>
     <div class="button">
         <button>
